Neuen Funktionen für Abfragen über Register.